# academic-docx-idn

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/plans/: 2026-06-22-python-docx-idn.md
examples/: contoh_kti.py  contoh_laporan.py  contoh_makalah.py  contoh_skripsi.py  kti_keberagaman_indonesia.py
src/docx_idn/: __init__.py
src/docx_idn/components/: abstract.py  appendix.py  bibliography.py  chapter.py  cover.py  toc.py
src/docx_idn/core/: config.py  document.py  style.py
src/docx_idn/types/: base.py  kti.py  laporan.py  makalah.py  skripsi.py
tests/: test_abstract.py  test_appendix.py  test_base_type.py  test_bibliography.py  test_chapter.py  test_comprehensive.py  test_config.py  test_cover.py  test_document.py  test_kti.py  test_laporan.py  test_makalah.py  test_skripsi.py  test_style.py  test_toc.py
