[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docx-idn"
version = "0.1.0"
description = "Generate Indonesian academic documents (makalah, laporan, KTI, skripsi) from dict/JSON"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docx_idn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
